# theremin-vst

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: FindONNXRuntime.cmake
docs/: DEV_SETUP.md
docs/superpowers/plans/: 2026-04-21-theremin-vst-implementation.md
docs/superpowers/specs/: 2026-04-21-theremin-vst-design.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginState.h
src/mapping/: Calibration.cpp  Calibration.h  GestureMapper.cpp  GestureMapper.h  Scales.cpp  Scales.h
src/midi/: MidiEmitter.cpp  MidiEmitter.h
tests/: CMakeLists.txt  test_calibration.cpp  test_gesture_mapper.cpp  test_main.cpp  test_midi_emitter.cpp  test_scales.cpp
